old slurm/slurm-5141.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
include/f/cuda_pattern/cuda_pattern.hpp:48:26: error: expected '>'
            matrix<double? a{ 1,6*config.max_dim*config.max_dim*2*config.tilt_size};
                         ^
1 error generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
, thickness = (0,1), ug_size = 13, tilt_size= 5, column_index = 0, 
 ug = 
(0.23589499999999999358,0)	
(0.0005930819999999999842,-6.3790100000000002881e-09)	
(0.0005930819999999999842,6.3790100000000002881e-09)	
(0.082869600000000001594,-7.396030000000000153e-09)	
(0.082869600000000001594,7.396030000000000153e-09)	
(0.0005930819999999999842,-6.3790100000000002881e-09)	
(0.0005930819999999999842,6.3790100000000002881e-09)	
(0.082869600000000001594,-7.396030000000000153e-09)	
(0.064142500000000005067,0)	
(0.064142500000000005067,-5.735679999999999781e-09)	
(0.082869600000000001594,7.396030000000000153e-09)	
(0.064142500000000005067,5.735679999999999781e-09)	
(0.064142500000000005067,0)	


 ar0 = 
0	2	1	
1	0	4	
2	3	0	
,
 diag0 = 
0	
0.45458984000000002279	
-0.5854492199999999924	
, 
Intensity0 = 
0.99999762000000003148	
7.2999999999999999873e-07	
7.2999999999999999873e-07	


 ar1 = 
0	2	1	
1	0	4	
2	3	0	
,
 diag1 = 
0	
-0.065673830000000002483	
-0.065673830000000002483	
, 
Intensity1 = 
0.99989212000000005087	
5.3730000000000002259e-05	
5.3730000000000002259e-05	


 ar2 = 
0	2	1	
1	0	4	
2	3	0	
,
 diag2 = 
0	
-0.065429689999999998684	
-0.065429689999999998684	
, 
Intensity2 = 
0.9998922900000000169	
5.3650000000000003025e-05	
5.3650000000000003025e-05	


 ar3 = 
0	6	5	2	1	
5	0	10	12	11	
6	7	0	9	8	
1	8	11	0	4	
2	9	12	3	0	
,
 diag3 = 
-0.00024414000000000000371	
0.064208979999999998833	
-0.1960449200000000114	
-0.065917970000000006281	
-0.065917970000000006281	
, 
Intensity3 = 
0.9998552200000000445	
7.3780000000000001722e-05	
6.309999999999999725e-06	
3.300000000000000253e-05	
3.300000000000000253e-05	


 ar4 = 
0	1	2	
2	0	3	
1	4	0	
,
 diag4 = 
0	
0.45458984000000002279	
-0.5854492199999999924	
, 
Intensity4 = 
0.99999762000000003148	
7.2999999999999999873e-07	
7.2999999999999999873e-07	

Merit: 6.3406022599810055557e-08
ABS: 0.00072889999999871456053

ug=
1	0	0.0005930819999999999842	-6.3790100000000002881e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.082869600000000001594	-7.396030000000000153e-09	0.082869600000000001594	7.396030000000000153e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.064142500000000005067	0	0.0005930819999999999842	-6.3790100000000002881e-09	0.064142500000000005067	0	1	3.2114266979681025371e-322	6.9134000074313341206e-310	8.399115979301191251e-323	4.9406564584124654418e-324	1.8149971850473032667e-316	1.136872718756875408e-316	1.8121126321806237329e-316	

a is 
0	0	-0	0	0	0	
0	0	0	1.4327903729396149781e-322	-0	2.4703282292062327209e-323	
-0	0	0	2.4703282292062327209e-323	0	-1.8280428896126122135e-322	

 max dim 5, a.size = 18 ,data.cache =
 0x7f4310600000, offset =0

real	0m1.052s
user	0m0.176s
sys	0m0.676s
